<resources>
    <string name="app_name">MedicalPhotoRecord</string>
    <string name="userID_prompt"></string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="CodeIdentifierText">Code:</string>
    <string name="UserIDIdentifierText">User ID:</string>
    <string name="PhoneIdentifierText">Phone #:</string>
    <string name="EmailIdentifierText">Email  :</string>
    <string name="Provider_Checkbox">I am a Provider</string>
    <string name="Patient_Checkbox">I am a Patient</string>
    <string name="Save_Changes">Save Changes</string>
    <string name="user_id">User_id</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="back">Done</string>
    <string name="EditContactInfo">Edit Contact Info</string>
    <string name="ListOfProblems">List of Problems</string>
    <string name="ListOfPatients">List of Patients</string>
    <string name="ViewContactInfo">View Profile</string>
    <string name="LogOut">Log Out</string>
    <string name="DeleteProfile">Delete Profile</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="geo">Add the geolocation</string>
    <string name="geo_view">View the geolocation</string>
    <string name="description">Description</string>
    <string name="add_problem">Add Problem</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="view_records">View Records</string>
    <string name="view_map">View Map of Records</string>
    <string name="view_slideshow">View Photo Slideshow</string>
    <string name="add_record">Add Record</string>
    <string name="setGeolocation">Set Geolocation</string>
    <string name="modify_problem_welcome">Edit Your Problem:</string>
    <string name="modify_problem_save">Save</string>
    <string name="modify_record_key">Modify Record</string>
    <string name="delete_record_key">Delete Record</string>
    <string name="view_record_geo">View GeoLocation</string>
    <string name="modify_record_welcome">Edit Record:</string>
    <string name="view_record_welcome">View Record</string>
    <string name="problem">Problem:</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="title_activity_maps">Map</string>
    <string name="draw_welcome">Draw an X on the location of the affected area</string>
    <string name="body_location_welcome">Choose the general body location where there is an issue:</string>
    <string name="GenerateLoginCode">Generate Login Code</string>
    <string name="add_comment">Enter Comment</string>
    <string name="Search">Perform Search</string>
    <string name="Advanced">Query Settings</string>
    <string name="title_activity_view_map">Map</string>
    <string name="IncludeLocation">Include Location</string>
    <string name="IncludeBodyLocation">Include BodyLocation</string>
    <string name="SearchForProblems">Search For Problems</string>
    <string name="SearchForRecords">Search For Records</string>
    <string name="SearchForPatientRecord">Search For Patient Records</string>
</resources>
