<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Class name: activity_provider_view_patient_record.xml
  ~
  ~ Version: Version 1.0
  ~
  ~ Developed by members of CMPUT301F18T20 on Date: 12/2/18 9:14 AM
  ~
  ~ Last Modified: 12/2/18 9:14 AM
  ~
  ~ Copyright (c) 2018, CMPUT301F18T20, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behavior at University of Alberta
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.ProviderViewPatientRecordActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/view_record_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_record_welcome"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_record_date"
        android:layout_width="368dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_record_welcome" />

    <TextView
        android:id="@+id/view_record_title"
        android:layout_width="368dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_record_date" />

    <TextView
        android:id="@+id/view_record_description"
        android:layout_width="368dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_record_title" />


    <ImageButton
        android:id="@+id/view_front_body"
        android:layout_width="130dp"
        android:layout_height="170dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_record_description"
        tools:src="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/view_back_body"
        android:layout_width="130dp"
        android:layout_height="170dp"

        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_record_description"
        tools:src="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onViewGeoLocationClick"
        android:text="@string/view_record_geo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>