<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.ViewUserActivity">


 <TextView
     android:id="@+id/UserIDBox"
     android:layout_width="302dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     app:layout_constraintBottom_toTopOf="@+id/EmailBox"
     app:layout_constraintStart_toEndOf="@+id/UserIDIdentifierTextView"
     app:layout_constraintTop_toTopOf="parent" />

 <TextView
     android:id="@+id/EmailBox"
     android:layout_width="302dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     app:layout_constraintBottom_toTopOf="@+id/PhoneBox"
     app:layout_constraintStart_toEndOf="@+id/EmailIdentifierTextView"
     app:layout_constraintTop_toBottomOf="@+id/UserIDBox" />

 <TextView
     android:id="@+id/PhoneBox"
     android:layout_width="302dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     app:layout_constraintBottom_toTopOf="@+id/backButton"
     app:layout_constraintStart_toEndOf="@+id/PhoneIdentifierTextView"
     app:layout_constraintTop_toBottomOf="@+id/EmailBox" />

 <TextView
     android:id="@+id/UserIDIdentifierTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:text="@string/UserIDIdentifierText"
     app:layout_constraintBaseline_toBaselineOf="@+id/UserIDBox"
     app:layout_constraintEnd_toStartOf="@+id/UserIDBox"
     app:layout_constraintStart_toStartOf="parent" />

 <TextView
     android:id="@+id/EmailIdentifierTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:text="@string/EmailIdentifierText"
     app:layout_constraintBaseline_toBaselineOf="@+id/EmailBox"
     app:layout_constraintEnd_toStartOf="@+id/EmailBox"
     app:layout_constraintStart_toStartOf="parent" />

 <TextView
     android:id="@+id/PhoneIdentifierTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:text="@string/PhoneIdentifierText"
     app:layout_constraintBaseline_toBaselineOf="@+id/PhoneBox"
     app:layout_constraintEnd_toStartOf="@+id/PhoneBox"
     app:layout_constraintStart_toStartOf="parent" />

 <Button
     android:id="@+id/backButton"
     android:layout_width="368dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:onClick="onBackClick"
     android:text="@string/back"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/PhoneBox" />
</android.support.constraint.ConstraintLayout>
